# ShockWave

./: .gitignore  LICENSE  README.md  pyproject.toml  run_mock_target.py
benchmark/: README.md  ground_truth.json  run.sh
shockwave/: __init__.py
shockwave/cli/: __init__.py  main.py
shockwave/data/: sensitive_fields.txt  wordlist.txt
shockwave/output/: __init__.py  json_writer.py  markdown_writer.py  matrix_writer.py  sarif_writer.py
shockwave/schema/: __init__.py  blind.py  drift.py  fingerprint.py  introspection.py  models.py
shockwave/tests/: __init__.py  auth_diff.py  auth_matrix.py  config.py  dos.py  idor.py  injection.py  rate_bypass.py  subscriptions.py
tests/unit/: test_mock_server.py
